--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,12 @@
 @import "tailwindcss";
 
+/* index.css */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE/Edge */
+  scrollbar-width: none;     /* Firefox */
+}
 
